# posixvala

./: .gitignore  Makefile  README.md  TODO  main.vala  meson.build  posixvala  posixvala.pc  posixvalac  test.gs
include/: glib-error.h  glib-list.h  glib-object.h  glib-string.h  glib.h  meson.build
include/glib/: gatomic.h  gerror.h  gmem.h  gmessages.h  gquark.h  gslice.h
include/gobject/: gboxed.h  gobject.h  gtype.h  gvaluecollector.h
include/posixvala/: glib-list.h  glib-object.h  glib-string.h  glib.h  posix-error.h  posix-list.h  posix-object.h  posix-string.h  runtime.h
pkgconfig/: posixvala.pc
pvala/: runtime.h
src/: posixccodecompiler.vala  posixvalacompiler.vala  pvalacompiler.vala  transform.vala
tests/: Makefile  clock.vala  getset.vala  lambda.vala  linux.vala  main.vala  meson.build  posix.vala  test-emcc.vala  test2.vala
tests/web/: Makefile  index.html  index.vala  r2pipe.vala  web.vala
vapi/: emscripten.vapi  glib-posix-2.0.vapi  meson.build
